--- a/static/mystyle.css
+++ b/static/mystyle.css
@@ -1,4 +1,11 @@
 body,button, input, select, textarea,h1 ,h2, h3, h4, h5, h6 { font-family: Microsoft YaHei,'宋体' , Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;}
+html, body{height:100%;}
+.wrapper{
+    min-height:100%;
+    _height:100%;
+    margin-bottom:-120px;   /*假定页脚的高度为120px*/
+}
+
 .article{
 	box-shadow:5px 5px 20px #CCC;
 	background-color:white;padding:20px 30px;
@@ -42,7 +49,7 @@ font-weight: bold;
 margin-bottom: 20px;
 border-width: 1px 0px 0px;
 border-style: solid none none;
-border-color: #5F5F5F -moz-use-text-color -moz-use-text-color;
+border-color: #5F5F5F;
 -moz-border-top-colors: none;
 -moz-border-right-colors: none;
 -moz-border-bottom-colors: none;
@@ -64,3 +71,4 @@ margin: 0px 0px 30px;
 border-left: 3px solid #6C9EE9;
 background-color: #EDEDED;
 }
+.footer, .footer_placeholder{height:120px;}    /*假定页脚的高度为120px*/
