--- a/templates/show_tag.html
+++ b/templates/show_tag.html
@@ -1,12 +1,4 @@
 {% extends "layout.html" %}
-{% block headjs %}
-    <style type="text/css">
-      #wordcloud {
-        width: 240px;
-        height: 320px;
-      }
-    </style>
-{% endblock %}
 {% block body %}
     <div class="container">
         <div class="row">
@@ -17,8 +9,8 @@
 			        <p><small><span class="glyphicon glyphicon-calendar" aria-hidden="true"></span><span style="color:#8C8C8C;">{{ post.create_time }}</span></small></p>
 			        <p>{{ post.fragment|safe }}</p>
 			        <div style="border-top:1px solid #EBEBEB;padding:10px 5px;margin-top:20px;">
-				        <p><a href="/tag/{{ post.id }}"><span class="label label-default text-left"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> {{ post.tag|upper }}</span>
-				        <a href="/entry/{{ post.id }}" style="float:right"><button class="btn  btn-primary btn-wide text-right"><span class="glyphicon glyphicon-fire glyphicon " aria-hidden="true"></span>了解更多</button></a></a></p>
+				        <p><a href=/tag/{{ post.id }}"><span class="label label-default text-left"><span class="glyphicon glyphicon-leaf" aria-hidden="true"></span> {{ post.tag|upper }}</span>
+				        <a href="/post/{{ post.id }}" style="float:right"><button class="btn  btn-primary btn-wide text-right"><span class="glyphicon glyphicon-fire glyphicon " aria-hidden="true"></span>了解更多</button></a></a></p>
 			        </div>
 		        </article>
                 {% endfor %}
@@ -42,32 +34,14 @@
 				        <div style="border-bottom:1px solid #DAD4D4;;padding:10px 10px;">
 					        <h5><span class="glyphicon glyphicon-tags" aria-hidden="true"></span>TOP LABEL</h5>
 				        </div>
-                        <div id="wordcloud"></div>
+				        <ul>
+					        {% for category in categorys %}
+					        <li class="presentation" style="padding-top:0px;"><a href="/category/{{ category.id }}" ><p><span style="font-size:15px;">> {{ category.tag|upper }}</span></p></a></li>
+					        {% endfor %}
+                        </ul>
 		            </div>
 		        </div>
             </div>
         </div>
     </div>
-
 {% endblock %}
-{% block bodyjs %}
-    <script type="text/javascript" src="../static/jqcloud-1.0.4.js"></script>
-    <script type="text/javascript">
-      var word_list = new Array(
-        {text: "linux", weight: 13, link: "/message/"},
-        {text: "python", weight: 10.5, link: "http://jquery.com/"},
-        {text: "mysql", weight: 9.4},
-        {text: "centos", weight: 8},
-        {text: "flask", weight: 6.2},
-        {text: "zookeeper", weight: 5},
-        {text: "hadoop", weight: 5},
-        {text: "openstack", weight: 5},
-        {text: "storm", weight: 5},
-        {text: "kafka", weight: 4},
-        {text: "nginx", weight: 4, link: "http://www.lucaongaro.eu/"}
-      );
-      $(document).ready(function() {
-        $("#wordcloud").jQCloud(word_list);
-      });
-    </script>
-{% endblock %}]
